--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,7 +9,10 @@ edition = "2021"
 askama = { version = "0.12.0", features = ["with-axum"] }
 askama_axum = "0.3.0"
 axum = "0.6.20"
+serde = { version = "1.0.183", features = ["derive"] }
+serde_json = "1.0.105"
 tokio = { version = "1.31.0", features = ["full"] }
+tower-cookies = "0.9.0"
 tower-http = { version = "0.4.3", features = ["fs"] }
 
 [dev-dependencies]
