--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,6 +11,7 @@ askama_axum = "0.3.0"
 axum = "0.6.20"
 serde = { version = "1.0.183", features = ["derive"] }
 serde_json = "1.0.105"
+sqlx = { version = "0.7.1", features = ["runtime-tokio", "sqlite"] }
 tokio = { version = "1.31.0", features = ["full"] }
 tower-cookies = "0.9.0"
 tower-http = { version = "0.4.3", features = ["fs"] }
