--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,6 +9,7 @@ edition = "2021"
 askama = { version = "0.12.0", features = ["with-axum"] }
 askama_axum = "0.3.0"
 axum = "0.6.20"
+config = "0.13.3"
 serde = { version = "1.0.183", features = ["derive"] }
 serde_json = "1.0.105"
 sqlx = { version = "0.7.1", features = ["runtime-tokio", "sqlite"] }
