--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,8 +8,10 @@ edition = "2021"
 [dependencies]
 askama = { version = "0.12.0", features = ["with-axum"] }
 askama_axum = "0.3.0"
+async-trait = "0.1.73"
 axum = "0.6.20"
 config = "0.13.3"
+lazy-regex = "3.0.1"
 serde = { version = "1", features = ["derive"] }
 serde_json = "1"
 sqlx = { version = "0.7.1", features = ["runtime-tokio", "sqlite"] }
