--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,6 +12,7 @@ async-trait = "0.1.73"
 axum = "0.6.20"
 config = "0.13.3"
 lazy-regex = "3.0.1"
+pwhash = "1.0.0"
 serde = { version = "1", features = ["derive"] }
 serde_json = "1"
 sqlx = { version = "0.7.1", features = ["runtime-tokio", "sqlite"] }
