--- a/configuration.yaml
+++ b/configuration.yaml
@@ -1,7 +1,8 @@
-application_addr: "0.0.0.0"
-application_port: 8000
-database_name: "db"
-port: 5432
-username: "postgres"
-password: "password"
-host: "127.0.0.1"
+addr: "127.0.0.1"
+port: 8000
+database:
+  db_name: "db"
+  port: 5432
+  username: "postgres"
+  password: "password"
+  host: "127.0.0.1"
