--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,7 +15,7 @@ lazy-regex = "3.0.1"
 pwhash = "1.0.0"
 serde = { version = "1", features = ["derive"] }
 serde_json = "1"
-sqlx = { version = "0.7.1", features = ["runtime-tokio", "sqlx-postgres", "postgres"] }
+sqlx = { version = "=0.7.2", features = ["runtime-tokio", "postgres"] }
 strum_macros = "0.25.2"
 tokio = { version = "1.31.0", features = ["full"] }
 tower-cookies = "0.9.0"
