List with item numbers and buttons

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,7 +9,7 @@ edition = "2021"
 askama = { version = "0.12.0", features = ["with-axum"] }
 askama_axum = "0.3.0"
 async-trait = "0.1.73"
-axum = "0.6.20"
+axum = { version = "0.6.20", features = ["headers"] }
 config = "0.13.3"
 lazy-regex = "3.0.1"
 pwhash = "1.0.0"
