--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,12 +10,13 @@ askama = { version = "0.12.0", features = ["with-axum"] }
 askama_axum = "0.3.0"
 async-trait = "0.1.73"
 axum = { version = "0.6.20", features = ["headers"] }
+chrono = "0.4.31"
 config = "0.13.3"
 lazy-regex = "3.0.1"
 pwhash = "1.0.0"
 serde = { version = "1", features = ["derive"] }
 serde_json = "1"
-sqlx = { version = "=0.7.2", features = ["runtime-tokio", "postgres"] }
+sqlx = { version = "=0.7.2", features = ["runtime-tokio", "postgres", "chrono"] }
 strum_macros = "0.25.2"
 tokio = { version = "1.31.0", features = ["full"] }
 tower-cookies = "0.9.0"
